tests/models/enum/named/i16/fail/alias.rs
use dade::model;
#[model]
enum TestModel {
    Value {
        #[field(alias = 1)]
        value: i16
    },
}
fn main() {}
